--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,44 +1,3 @@
 ---
-- name: Upgrade package
-  apt:
-    update_cache: yes
-    upgrade: yes
-
-- name: Restrict password authentication
-  lineinfile:
-    dest: /etc/ssh/sshd_config
-    regexp: "^PasswordAuthentication"
-    insertafter: "^#PasswordAuthentication"
-    line: "PasswordAuthentication no"
-
-- name: Restrict challenge response authentication
-  lineinfile:
-    dest: /etc/ssh/sshd_config
-    regexp: "^ChallengeResponseAuthentication"
-    insertafter: "^#ChallengeResponseAuthentication"
-    line: "ChallengeResponseAuthentication no"
-
-- name: Restrict root login
-  lineinfile:
-  lineinfile:
-    dest: /etc/ssh/sshd_config
-    regexp: "^PermitRootLogin"
-    insertafter: "^#PermitRootLogin"
-    line: "PermitRootLogin no"
-
-- name: Restart sshd
-  service:
-    name: sshd
-    state: restarted
-
-- name: Default ufw setting
-  ufw:
-    state: enabled
-    policy: deny
-
-- name: Allow all access to port
-  ufw:
-    rule: allow
-    port: "{{ sshd_port }}"
-    proto: tcp
-
+- include_tasks: initial.yml
+- include_tasks: kubeadm.yml
