--- a/roles/master/tasks/cluster_init.yml
+++ b/roles/master/tasks/cluster_init.yml
@@ -5,6 +5,7 @@
     --pod-network-cidr=10.244.0.0/16
     --control-plane-endpoint=master1
     --apiserver-cert-extra-sans=master1
+  become: yes
 
 - name: Create .kube directory
   file:
@@ -24,3 +25,20 @@
     group: "{{ansible_ssh_user}}"
     mode: preserve
   become: yes
+
+- name: Cluster token
+  shell: kubeadm token list | cut -d ' ' -f1 | sed -n '2p'
+  register: K8S_TOKEN
+
+- name: CA Hash
+  shell: openssl x509 -pubkey -in /etc/kubernetes/pki/ca.crt | openssl rsa -pubin -outform der 2>/dev/null | openssl dgst -sha256 -hex | sed 's/^.* //'
+  register: K8S_MASTER_CA_HASH
+
+- name: Add K8S Token and Hash to dummy host
+  add_host:
+    name: K8S_TOKEN_HOLDER
+    token: "{{ K8S_TOKEN.stdout }}"
+    hash: "{{ K8S_MASTER_CA_HASH.stdout }}"
+
+- name: Flannel setup
+  shell: kubectl apply -f https://raw.githubusercontent.com/flannel-io/flannel/v0.16.3/Documentation/kube-flannel.yml
