--- a/roles/master/tasks/cluster_init.yml
+++ b/roles/master/tasks/cluster_init.yml
@@ -50,3 +50,13 @@
       source <(kubectl completion bash)
       alias k=kubectl
       complete -F __start_kubectl k
+
+- name: vim indent config
+  blockinfile:
+    path: $HOME/.vimrc
+    create: yes
+    marker: '" {mark} ANSIBLE MANAGED BLOCK'
+    block: |
+      set expandtab
+      set tabstop=2
+      set shiftwidth=2
